deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-django
  template:
    metadata:
      labels:
        app: test-django
    spec:
      containers:
        - name: test-django
          image: docker.io/library/test-django-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 88
