deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-django-app
spec:
  type: NodePort
  selector:
    app: test-django
  ports:
    - protocol: TCP
      port: 8788
      targetPort: 80
